k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: annotation
  labels:
    app.kubernetes.io/part-of: fm-auto-annotation
